# time-track-system

./: .gitignore  README.md  pyproject.toml
src/: .env_example
src/config/: api_router.py  urls.py
src/config/settings/: base.py  local.py  production.py
src/project/organizations/: admin.py  apps.py  models.py
src/project/organizations/migrations/: 0001_initial.py  0002_rename_floors_floor.py
src/project/static/css/: project.css
src/project/templates/: _.html  base.html  pagination.html
src/project/templates/account/: login.html
src/project/templates/users/: user_detail.html  user_form.html
src/project/time_control/: admin.py  apps.py  models.py
src/project/time_control/migrations/: 0001_initial.py  0002_initial.py
src/project/users/: adapters.py  admin.py  apps.py  models.py  urls.py  views.py
src/project/users/api/: serializers.py
src/project/users/migrations/: 0001_initial.py
src/project/utils/: __init__.py  model_utils.py
src/project/utils/commands/: classes.py  decorators.py
src/project/utils/enum/: Enum.py  __init__.py
src/project/utils/types/: __init__.py  classes.py
